# mllab

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  credentials.json  jupyter_notebook_config.py  requirements.txt  setup.cfg  token.json  try.py
docs/source/: conf.py  index.rst
docs/source/additional_information/: contributing.rst
mllab/: __init__.py  test.py
mllab/backtest_statistics/: __init__.py  backtests.py
mllab/bet_sizing/: __init__.py  bet_sizing.py  ch10_snippets.py
mllab/clustering/: __init__.py  feature_clusters.py
mllab/codependence/: __init__.py  codependence_matrix.py
mllab/cross_validation/: __init__.py  combinatorial.py  cross_validation.py
mllab/data_generation/: __init__.py  corrgan.py  data_verification.py  vines.py
mllab/data_structures/: __init__.py  base_bars.py  imbalance_data_structures.py  preprocess_data.py  run_data_structures.py  standard_data_structures.py  time_data_structures.py
mllab/datasets/: __init__.py  load_datasets.py
mllab/ensemble/: __init__.py  model_train.py  sb_bagging.py
mllab/feature_importance/: __init__.py  fingerpint.py  importance.py
mllab/features/: __init__.py  fracdiff.py
mllab/filters/: __init__.py  filters.py
mllab/labeling/: __init__.py  bull_bear.py  excess_over_mean.py  fixed_time_horizon.py  labeling.py  return_vs_benchmark.py  tail_sets.py  trend_scanning.py
mllab/microstructural_features/: __init__.py  encoding.py  entropy.py  feature_generator.py  first_generation.py  misc.py  second_generation.py  third_generation.py
mllab/multi_product/: __init__.py
mllab/networks/: __init__.py  almst.py  dash_graph.py  dual_dash_graph.py  mst.py  pmfg.py  visualisations.py
mllab/pipeline/: __init__.py  drive.py  pipeline.py
mllab/pipiline/: __init__.py  pipeline.py
mllab/regression/: __init__.py
mllab/sample_weights/: __init__.py  attribution.py
mllab/sampling/: __init__.py  bootstrapping.py  concurrent.py
mllab/structural_breaks/: __init__.py  chow.py  cusum.py  sadf.py
mllab/util/: __init__.py  multiprocess.py  volatility.py
