[metadata]
name = mllab
version = 1.4.393
author = SVS
author_email = svs.finpro@gmail.com
licence = All Rights Reserved
licence-file = LICENSE.txt
description = Mllab helps portfolio managers and traders who want to leverage the power of machine learning by providing reproducible, interpretable, and easy to use tools.
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
url = 
project_urls =
    Documentation = https://mllab.readthedocs.io/en/latest/
    Bug Reports = https://github.com/hudson-and-thames/mllab/issues
    Project Boards = https://github.com/orgs/hudson-and-thames/projects
    Source = https://github.com/hudson-and-thames/mllab
    Blog = https://hudsonthames.org/blog/
    Apprenticeship Program = https://hudsonthames.org/apprenticeship-program/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Financial and Insurance Industry
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Office/Business :: Financial :: Investment
keywords =
    machinelearning
    finance
    investment
    education

[options]
include_package_data = True
packages = find:
python_requires =
    >=3.8
setup_requires =
    setuptools
    cython
install_requires =
    numpy>=0.16.0
    matplotlib>=3.0.0
    pandas>=1.0.0
    scikit-learn>=0.20.0
    scipy>=1.2.0
    statsmodels>=0.9.0
    cython>=0.29
    POT>=0.7.0
    numba>=0.40.0
    networkx>=2.2
    dash>=1.0.0
    dash-cytoscape>=0.1.0
    dash-bootstrap-components>=0.10.0
    jupyter-dash>=0.2.0
    tensorflow>=2.0.0
    joblib>=1.0.0
    decorator>=4.0.0
    analytics-python>=1.2.7
    getmac>=0.8.0


[options.packages.find]
package_dir =
    mllab
exclude =
    contrib
    docs
    tests
